--- a/card.html
+++ b/card.html
@@ -4,41 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
   <title>Card</title>
-
-  <style>
-body{
-  font-family: 'Nunito', sans-serif;
-
-}
-.main-card {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  width: 200px;
-  border-radius: 5px; /* 5px rounded corners */
-}
-
-/* --created by Jai keerthick-- */
-img {
-  border-radius: 5px 5px 0 0;
-}
-
-/* On hovering, add a deeper shadow effect */
-.card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
-
-/* Add some padding inside the card container (optional) */
-.container {
-  padding: 2px 16px;
-}
-
-  </style>
-
 </head>
 <body>
   <div class="main-card">
